--- a/src/main/scss/components/card/_all.scss
+++ b/src/main/scss/components/card/_all.scss
@@ -1,3 +1,20 @@
+///@group components.cards
+
+///@label Card padding
+///@fieldset dimension
+///@editor dimension
+$card-padding: $as-gutter !default;
+
+///@label Card shadow
+///@fieldset dimension
+///@editor shadow
+$card-box-shadow: $as-whiteframe-shadow-1dp !default;
+
+///@label Card border radius
+///@fieldset dimension
+///@editor small-radius
+$card-border-radius: 2px !default;
+
 @import "as-card";
 @import "as-card-theme";
 @import "as-project-kind";
