--- a/src/main/scss/components/complex-editor/_all.scss
+++ b/src/main/scss/components/complex-editor/_all.scss
@@ -1,3 +1,10 @@
+///@group components.complexeditor
+
+///@label Gutter of complex editor summary panel
+///@fieldset dimension
+///@editor gutter
+$as-complex-editor-summary-gutter: $as-gutter * 1.5;
+
 @import "as-complex-editor";
 @import "as-complex-editor-header";
 @import "as-complex-editor-selection-summary";
