--- a/src/main/scss/variables/_variables-core.scss
+++ b/src/main/scss/variables/_variables-core.scss
@@ -91,11 +91,6 @@ $as-layout-breakpoint-lg:     1200px !default;
 ///@editor dimension
 $as-layout-gutter-width:      ($as-baseline-grid * 2) !default;
 
-///@group components.appbar
-///@label Application bar height
-///@editor dimension
-$as-app-bar-height: 64px;
-
 ///@group components.toast
 ///@label Toast height
 ///@editor dimension
@@ -164,12 +159,26 @@ $as-z-index-menu: 99;
 ///@label Drop down z-index
 ///@editor z-index
 $as-z-index-select: 99 !default;
+///@label Dialog z-index
+///@editor z-index
 $as-z-index-dialog: 80 !default;
+///@label Toast z-index
+///@editor z-index
 $as-z-index-toast: 90 !default;
+///@label Bottom sheet z-index
+///@editor z-index
 $as-z-index-bottom-sheet: 70 !default;
+///@label Scroll mask z-index
+///@editor z-index
 $as-z-index-scroll-mask: 65 !default;
+///@label Side nav bar (drawer) z-index
+///@editor z-index
 $as-z-index-sidenav: 60 !default;
+///@label Side nav bar (drawer) z-index
+///@editor z-index
 $as-z-index-backdrop: 50 !default;
+///@label FAB button z-index
+///@editor z-index
 $as-z-index-fab: 20 !default;
 
 ///@group core.transitions.easingcurves
