design preview panel

--- a/src/main/scss/components/button/_all.scss
+++ b/src/main/scss/components/button/_all.scss
@@ -17,6 +17,7 @@
 	@import "asa-button-fab";
 	@import "asa-button-raised";
 	@import "asa-button-mini";
+	@import "asa-selected";
 	@import "asa-ripple-container";
 	@import "as-button-icon";
 	@import "as-button-text";
