--- a/src/main/scss/variables/_variables-core.scss
+++ b/src/main/scss/variables/_variables-core.scss
@@ -1,7 +1,7 @@
-/* 
-  Allow angular.js to be loaded in body, hiding cloaked elements until 
-  templates compile.  The !important is important given that there may be 
-  other selectors that are more specific or come later and might alter display.  
+/*
+  Allow angular.js to be loaded in body, hiding cloaked elements until
+  templates compile.  The !important is important given that there may be
+  other selectors that are more specific or come later and might alter display.
  */
 [ng\:cloak], [ng-cloak], .ng-cloak {
   display: none !important;
@@ -45,26 +45,35 @@ $as-icon-size-medium: 36px;
 $as-icon-size-big: 48px;
 
 ///@group typography
+///@fieldset-def base{label:'Base font', theme='grid'}
+///@fieldset-def headings{label:'Headings', theme='grid'}
 
 ///@label Default font family
+///@fieldset base
 ///@editor font
 $as-font-family: Roboto, 'Helvetica Neue', sans-serif !default;
 ///@label Default font size
+///@fieldset base
 ///@editor dimension
 $as-font-size:   10px;
 
-///@label H4 font size
-///@editor rem
-$as-display-4-font-size-base: rem(11.20) !default;
-///@label H3 font size
-///@editor rem
-$as-display-3-font-size-base: rem(5.600) !default;
-///@label H2 font size
-///@editor rem
-$as-display-2-font-size-base: rem(4.500) !default;
 ///@label H1 font size
+///@fieldset headings
 ///@editor rem
 $as-display-1-font-size-base: rem(3.400) !default;
+///@label H2 font size
+///@fieldset headings
+///@editor rem
+$as-display-2-font-size-base: rem(4.500) !default;
+///@label H3 font size
+///@fieldset headings
+///@editor rem
+$as-display-3-font-size-base: rem(5.600) !default;
+///@label H4 font size
+///@fieldset headings
+///@editor rem
+$as-display-4-font-size-base: rem(11.20) !default;
+
 ///@label Headline font size
 ///@editor rem
 $as-headline-font-size-base:  rem(2.400) !default;
