--- a/src/main/scss/variables/_variables-palette.scss
+++ b/src/main/scss/variables/_variables-palette.scss
@@ -339,6 +339,7 @@ $as-palette-white : (
 // Black palette from google material design
 $as-palette-black : (
 	lighter: rgba(0,0,0,.12), // Dividers
+	20:   	 rgba(0,0,0,.20), // Disabled / Hint Text
 	light:   rgba(0,0,0,.26), // Disabled / Hint Text
 	dark:    rgba(0,0,0,.54), // Secondary text / Icons
 	darker:  rgba(0,0,0,.87) // Text
@@ -378,4 +379,3 @@ $as-palette-black : (
 @include color-classes($as-palette-grey , grey);
 @include color-classes($as-palette-white , white);
 @include color-classes($as-palette-black , black);
-
