--- a/src/main/scss/components/navigation/bottom/_all.scss
+++ b/src/main/scss/components/navigation/bottom/_all.scss
@@ -19,25 +19,35 @@ $as-bottom-navigation-active-color: map-get($as-palette-grey, 500);
 
 .as-bottom-navigation-contaner
 {
-
+	@extend .as-vbox;
+	@extend .as-panel;
+}
+.as-bottom-navigation-content
+{
+	@extend .as-cell-wide;
+}
+.as-bottom-navigation-bar
+{
+	@extend .as-hbox;
 }
 .as-bottom-navigation-action
 {
-  color: $as-bottom-navigation-color;
-  padding-left: $as-bottom-navigation-phone-hpadding;
-  padding-right: $as-bottom-navigation-phone-hpadding;
-  padding-top: 8px;
-  text-align:center;
-  min-width: $as-bottom-navigation-action-min-width;
-  max-width: $as-bottom-navigation-action-max-width;
-  font-size: dp(12);
-  &:hover,
-  &.asa-selected
-  {
-    color: $as-bottom-navigation-active-color;
-    padding-top: 6px;
-    font-size: dp(14);
-  }
+	@extend .as-cell-wide;	
+	color: $as-bottom-navigation-color;
+	padding-left: $as-bottom-navigation-phone-hpadding;
+	padding-right: $as-bottom-navigation-phone-hpadding;
+	padding-top: 8px;
+	text-align:center;
+	min-width: $as-bottom-navigation-action-min-width;
+	max-width: $as-bottom-navigation-action-max-width;
+	font-size: dp(12);
+	&:hover,
+	&.asa-selected
+	{
+		color: $as-bottom-navigation-active-color;
+		padding-top: 6px;
+		font-size: dp(14);
+	}
 }
 .as-bottom-navigation-action-icon
 {
