--- a/src/main/scss/components/_all.scss
+++ b/src/main/scss/components/_all.scss
@@ -1,6 +1,7 @@
 @import "integration/all-top";
 @import "layout/all";
 @import "navigation/all-top";
+@import "bg/all-top";
 
 .table-scrollable{
     overflow: auto;
