--- a/src/main/scss/components/button/_as-button-text.scss
+++ b/src/main/scss/components/button/_as-button-text.scss
@@ -1,7 +1,7 @@
 .as-button-text
 {
 	@extend .as-cell-wide;
-	
+	text-decoration:none;
 	align-items: center;
 	text-align: center;
 	padding-top: 2px;
