--- a/src/main/scss/components/card/_as-card-theme.scss
+++ b/src/main/scss/components/card/_as-card-theme.scss
@@ -2,10 +2,11 @@
 .as-card
 {
   background-color: map-get($as-palette-bg, darker);
-  border-radius: $card-border-radius;
+  border-radius: $as-card-border-radius;
 
-  .as-card-image {
-    border-radius: $card-border-radius $card-border-radius 0 0;
+  .as-card-image
+  {
+    border-radius: $as-card-border-radius $as-card-border-radius 0 0;
   }
 
   .as-card-header {
