--- a/src/main/scss/components/card/_as-card.scss
+++ b/src/main/scss/components/card/_as-card.scss
@@ -4,18 +4,20 @@
 	display: flex;
 	flex-direction: column;
 	margin: $as-baseline-grid;
-	box-shadow: $card-box-shadow;
+	box-shadow: $as-card-box-shadow;
 
-  .as-card-header {
-    padding: $card-padding;
-    display: flex;
-    flex-direction: row;
-
-    &:first-child {
-      .as-card-avatar {
-        margin-right: 12px;
-      }
-    }
+	.as-card-header
+	{
+		padding: $as-card-padding;
+		display: flex;
+		flex-direction: row;
+		&:first-child
+		{
+			.as-card-avatar
+			{
+				margin-right: 12px;
+			}
+		}
 
     &:last-child {
       .as-card-avatar {
@@ -66,13 +68,13 @@
   }
 
   .as-card-title {
-    padding: 3 * $card-padding / 2 $card-padding $card-padding;
+    padding: 3 * $as-card-padding / 2 $as-card-padding $as-card-padding;
     display: flex;
     flex: 1;
     flex-direction: row;
 
     & + .as-card-content {
-      padding-top: 0;
+      -padding-top: 0;
     }
 
     .as-card-title-text {
@@ -87,13 +89,13 @@
 
       &:only-child {
         .as-subhead {
-          padding-top: 3 * $card-padding / 4;
+          padding-top: 3 * $as-card-padding / 4;
         }
       }
     }
 
     .as-card-title-media {
-      margin-top: - $card-padding / 2;
+      margin-top: - $as-card-padding / 2;
 
       .as-media-sm {
         height: 80px;
@@ -112,7 +114,7 @@
 
   .as-card-content {
     display: block;
-    padding: $card-padding;
+    padding: $as-card-padding;
 
     & > p {
       &:first-child {
@@ -130,7 +132,7 @@
     }
   }
 
-  .as-actions, .as-card-actions {
+  .as-card-actions {
     margin: $as-baseline-grid;
 
     &.layout-column {
@@ -198,7 +200,7 @@
 
   .as-card-footer {
     margin-top: auto;
-    padding: $card-padding;
+    padding: $as-card-padding;
   }
 }
 
