view tree - start logic implementation

--- a/src/main/scss/components/integration/view-tree/_all.scss
+++ b/src/main/scss/components/integration/view-tree/_all.scss
@@ -87,8 +87,9 @@ $studio-view-tree-node-vgutter: 10px;
 }
 .studio-view-tree-shortcuts
 {
-	@extend .as-panel;
-	left: auto;
+	position: absolute;
+	top: 0px;
+	right: 0px;
 	color: map-get($as-palette-grey, 800);
 	padding: $as-gutter *2;
 	font-size: 16px;
