view tree - ref to structure

--- a/src/main/scss/components/integration/view-tree/node-info.scss
+++ b/src/main/scss/components/integration/view-tree/node-info.scss
@@ -1,4 +1,16 @@
 .studio-view-tree-node-info
 {
 	@extend .as-hbox;
+	&.asa-expanded
+	{
+		.studio-view-tree-node-details
+		{
+			display: block;
+		}
+	}
+}
+.studio-view-tree-node-details
+{
+	@extend .as-vbox;
+	display: none;
 }
